--- a/client/src/components/Navbar/Navitem/Navitem.module.css
+++ b/client/src/components/Navbar/Navitem/Navitem.module.css
@@ -1,6 +1,6 @@
 .nav-item {
   position: relative;
-  padding: 0 1.5rem;
+  padding: 0 2rem;
   cursor: pointer;
   display: flex;
   justify-content: center;
